mido: DeviceParts: Import dirac
also kick XiaomiParts

Change-Id: Icdc17a7f1d7f3f595beac5358c8f382f6d848946
Signed-off-by: Ali Hasan <ahb7671@gmail.com>